[package]
name = "artery-font"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "example"
]

[features]
double = []
no-checksum = []

[dependencies]
anyhow = "1.0"
zerocopy = "0.6.1"
num_enum = "0.5.7"
png = {version = "0.17.5", optional = true}