[package]
name = "artery-font"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A pure rust parser for artery font files"
readme = "README.md"
repository = "https://github.com/sidit77/artery-font/"
keywords = ["font"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "example"
]

[features]
double = []
no-checksum = []

[dependencies]
bytemuck = {version = "1.9.1", features = ["derive"]}
png = {version = "0.17.5", optional = true}