[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artery-font = {path = "..", features = []}
glium = "0.31"
glutin = "0.28"
glam = "0.20"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"